--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://pinggu-db.internal:5432/postgres?sslmode=require
+    url: jdbc:postgresql://pinggu-db.flycast:5432/postgres?sslmode=require
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
