--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: ${DATABASE_URL}
-
+    driver-class-name: org.postgresql.Driver
   kakao:
     auth:
       client-id: ${KAKAO_CLIENT_ID}
