--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
-    url: ${DATABASE_URL}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://pinggu-db.internal:5432/postgres?sslmode=disable
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   kakao:
     auth:
       client-id: ${KAKAO_CLIENT_ID}
