--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,12 @@
 spring:
   datasource:
-    url: jdbc:postgresql://pinggu-db.internal:5432/postgres?sslmode=disable
+    url: jdbc:postgresql://${HOST_NAME}:5432/?user=${DB_USERNAME}&password=${DB_PASSWORD}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
   kakao:
     auth:
       client-id: ${KAKAO_CLIENT_ID}
