update: fly.io 배포를 위한 파일 수정

--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for pinggu-backend on 2025-05-16T17:16:24+09:00
+# fly.toml app configuration file generated for pinggu-backend on 2025-05-18T15:33:42+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,30 +9,30 @@ primary_region = 'hkg'
 [build]
 
 [http_service]
-internal_port = 8080
-force_https = true
-auto_stop_machines = 'stop'
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
-
-[[vm]]
-memory = '1gb'
-cpu_kind = 'shared'
-cpus = 1
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[services]]
-internal_port = 8080
-protocol = "tcp"
+  protocol = 'tcp'
+  internal_port = 8080
 
-[[services.ports]]
-port = 80
-handlers = ["http"]
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
 
-[[services.ports]]
-port = 443
-handlers = ["tls", "http"]
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
 
-[[services.tcp_checks]]
-interval = 10000
-timeout = 2000
+  [[services.tcp_checks]]
+    interval = '10s'
+    timeout = '2s'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
