--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:local} // 환경변수 없으면 local이 기본값
+    active: ${SPRING_PROFILES_ACTIVE:local}
   liquibase:
     change-log: classpath:db/liquibase/changelog-master.yaml
     enabled: true
