--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,18 +1,31 @@
-# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
+\name: Fly Deploy
 
-name: Fly Deploy
 on:
   push:
     branches:
       - main
+
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Build jar with Gradle
+        run: ./gradlew build
+
+      - name: Deploy to Fly.io
+        uses: superfly/flyctl-actions@1.3
+        with:
+          args: "deploy"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
