--- a/fly.toml
+++ b/fly.toml
@@ -20,17 +20,19 @@ primary_region = 'hkg'
   protocol = 'tcp'
   internal_port = 8080
 
-  [[services.ports]]
-    port = 80
-    handlers = ['http']
+[[services.ports]]
+  port = 80
+  handlers = ['http']
 
-  [[services.ports]]
-    port = 443
-    handlers = ['tls', 'http']
+[[services.ports]]
+  port = 443
+  handlers = ['tls', 'http']
 
-  [[services.tcp_checks]]
-    interval = '10s'
-    timeout = '2s'
+[[services.tcp_checks]]
+  interval = '15s'
+  timeout = '5s'
+  grace_period = "30s"
+
 
 [[vm]]
   memory = '1gb'
