--- a/fly.toml
+++ b/fly.toml
@@ -1,38 +1,27 @@
-# fly.toml app configuration file generated for pinggu-backend on 2025-05-18T15:33:42+09:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = 'pinggu-backend'
 primary_region = 'hkg'
 
 [build]
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
-
 [[services]]
   protocol = 'tcp'
   internal_port = 8080
+  processes = ['app']
+  auto_stop_machines = true
+  auto_start_machines = true
 
-[[services.ports]]
-  port = 80
-  handlers = ['http']
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
 
-[[services.ports]]
-  port = 443
-  handlers = ['tls', 'http']
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
 
-[[services.tcp_checks]]
-  interval = '15s'
-  timeout = '5s'
-  grace_period = "30s"
-
+  [[services.tcp_checks]]
+    interval = '15s'
+    timeout = '5s'
+    grace_period = '30s'
 
 [[vm]]
   memory = '1gb'
