--- a/fly.toml
+++ b/fly.toml
@@ -3,6 +3,15 @@ primary_region = 'hkg'
 
 [build]
 
+
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ["app"]
+
 [[services]]
   protocol = 'tcp'
   internal_port = 8080
